--- a/.github/workflows/master_fecilitasapp-api-cus-poc.yml
+++ b/.github/workflows/master_fecilitasapp-api-cus-poc.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Java version
         uses: actions/setup-java@v1
         with:
-          java-version: '17'
+          java-version: '11'
 
       - name: Build with Maven
         run: mvn clean install
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/target/*.war'
 
   deploy:
     runs-on: windows-latest
@@ -48,9 +48,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FB568E538F51421DA7143FDD716FC85F }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3ECD5E462B084AF3B05B46C0794AFE19 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2274E9E43E854564B67993DC00175BA1 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_27EF0DD7624941C9A1CC61E88ADBD88B }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_26006310708B45C39359EA870048AF59 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_691775B44C594F3D8BD16C520D008B83 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -58,5 +58,5 @@ jobs:
         with:
           app-name: 'fecilitasapp-api-cus-poc'
           slot-name: 'Production'
-          package: '*.jar'
+          package: '*.war'
           
